--- a/uitwerking/package.json
+++ b/uitwerking/package.json
@@ -12,32 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.5",
-    "@angular/common": "7.2.5",
-    "@angular/compiler": "7.2.5",
-    "@angular/core": "7.2.5",
-    "@angular/forms": "7.2.5",
-    "@angular/http": "7.2.5",
-    "@angular/platform-browser": "7.2.5",
-    "@angular/platform-browser-dynamic": "7.2.5",
-    "@angular/router": "7.2.5",
+    "@angular/animations": "8.2.11",
+    "@angular/common": "8.2.11",
+    "@angular/compiler": "8.2.11",
+    "@angular/core": "8.2.11",
+    "@angular/forms": "8.2.11",
+    "@angular/platform-browser": "8.2.11",
+    "@angular/platform-browser-dynamic": "8.2.11",
+    "@angular/router": "8.2.11",
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
     "core-js": "^2.4.1",
     "rxjs": "^6.4.0",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.1",
-    "@angular/cli": "7.3.1",
-    "@angular/compiler-cli": "7.2.5",
-    "@angular/language-service": "7.2.5",
+    "@angular-devkit/build-angular": "~0.803.12",
+    "@angular/cli": "8.3.12",
+    "@angular/compiler-cli": "8.2.11",
+    "@angular/language-service": "8.2.11",
     "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^11.9.4",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
@@ -46,6 +45,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~3.2.0",
     "tslint": "^5.12.1",
-    "typescript": "3.2.4"
+    "typescript": "3.5.3"
   }
 }
